--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
-#load_module modules/ngx_http_cache_purge_module.so;
-#load_module modules/ngx_http_headers_more_filter_module.so;
+load_module modules/ngx_http_cache_purge_module.so;
+load_module modules/ngx_http_headers_more_filter_module.so;
 
 error_log stderr notice;
 error_log /var/log/nginx/demyx.error.log;
@@ -11,14 +11,13 @@ worker_rlimit_nofile 100000;
 pcre_jit on;
 
 events {
-    worker_connections  1024;
-    multi_accept on;
-    accept_mutex on;
-    use epoll;
+  worker_connections  1024;
+  multi_accept on;
+  accept_mutex on;
+  use epoll;
 }
 
 http {
-
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -53,7 +52,7 @@ http {
   add_header X-Content-Type-Options "nosniff";
   add_header Referrer-Policy "strict-origin-when-cross-origin";
   add_header X-Download-Options "noopen";
-  add_header Feature-Policy "geolocation 'none'; midi 'none'; sync-xhr 'none'; microphone 'none'; camera 'none'; magnetometer 'none'; gyroscope 'none'; speaker 'none'; fullscreen 'self'; payment 'none'; usb 'none'";
+  add_header Feature-Policy "geolocation 'self'; midi 'self'; sync-xhr 'self'; microphone 'self'; camera 'self'; magnetometer 'self'; gyroscope 'self'; speaker 'self'; fullscreen 'self'; payment 'self'; usb 'self'";
 
   client_max_body_size 128M;
   client_body_temp_path /tmp 1 2;
@@ -72,10 +71,10 @@ http {
     server 127.0.0.1:9000;
   }
 
+  #include /etc/nginx/cache/http.conf;
+
   server {
-
     listen       80;
-
     root /var/www/html;
     index  index.php index.html index.htm;
     access_log stdout;
@@ -83,7 +82,11 @@ http {
     error_log stderr notice;
     error_log /var/log/nginx/demyx.error.log;
 
+    #CF
+
     disable_symlinks off;
+
+    #include /etc/nginx/cache/server.conf;
 
     location / {
       try_files $uri $uri/ /index.php?$args;
@@ -98,11 +101,22 @@ http {
       fastcgi_index index.php;
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
       include fastcgi_params;
-      limit_req zone=one burst=5 nodelay;
+      #limit_req zone=one burst=5 nodelay;
+      #include /etc/nginx/cache/location.conf;
+    }
+
+    location = /wp-login.php {
+      #auth_basic "Restricted";
+      #auth_basic_user_file /.htpasswd;
+      include fastcgi_params;
+      fastcgi_pass php;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location = /xmlrpc.php {
+      deny all;
     }
 
     include /etc/nginx/common/*.conf;
-
   }
-
 }
