--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ load_module modules/ngx_http_cache_purge_module.so;
 load_module modules/ngx_http_headers_more_filter_module.so;
 
 error_log stderr notice;
-error_log /var/log/nginx/demyx.error.log;
+error_log /var/log/demyx/demyx.error.log;
 pid /var/run/nginx.pid;
 
 worker_processes  auto;
@@ -31,7 +31,7 @@ http {
   default_type application/octet-stream;
 
   access_log stdout;
-  access_log /var/log/nginx/demyx.access.log main;
+  access_log /var/log/demyx/demyx.access.log main;
   
   tcp_nopush   on;
   tcp_nodelay  on;
@@ -78,9 +78,9 @@ http {
     root /var/www/html;
     index  index.php index.html index.htm;
     access_log stdout;
-    access_log /var/log/nginx/demyx.access.log main;
+    access_log /var/log/demyx/demyx.access.log main;
     error_log stderr notice;
-    error_log /var/log/nginx/demyx.error.log;
+    error_log /var/log/demyx/demyx.error.log;
 
     #CF
 
