--- a/tag-latest/nginx.conf
+++ b/tag-latest/nginx.conf
@@ -67,6 +67,7 @@ http {
 
   limit_req_status 503;
   limit_req_zone $request_uri zone=one:10m rate=1r/s;
+  limit_conn_zone $binary_remote_addr zone=addr:10m;
 
   gzip off;
 
@@ -93,6 +94,7 @@ http {
 
     location / {
       try_files $uri $uri/ /index.php?$args;
+      #limit_conn addr 5;
     }
 
     location ~ [^/]\.php(/|$) {
