--- a/tag-latest/nginx.conf
+++ b/tag-latest/nginx.conf
@@ -14,7 +14,7 @@ worker_rlimit_nofile 100000;
 pcre_jit on;
 
 events {
-  worker_connections  1024;
+  worker_connections  50000;
   multi_accept on;
   accept_mutex on;
   use epoll;
@@ -67,7 +67,9 @@ http {
 
   limit_req_status 503;
   limit_req_zone $request_uri zone=one:10m rate=1r/s;
-  limit_conn_zone $binary_remote_addr zone=addr:10m;
+
+  limit_conn_zone $binary_remote_addr zone=limit_per_ip:10m;
+  limit_conn limit_per_ip 80;
 
   gzip off;
 
@@ -95,6 +97,7 @@ http {
     location / {
       try_files $uri $uri/ /index.php?$args;
       #limit_conn addr 5;
+      #bedrock
     }
 
     location ~ [^/]\.php(/|$) {
@@ -108,14 +111,6 @@ http {
       include fastcgi_params;
       #limit_req zone=one burst=5 nodelay;
       #include /etc/nginx/cache/location.conf;
-    }
-
-    location = /wp-login.php {
-      #auth_basic "Restricted";
-      #auth_basic_user_file /.htpasswd;
-      include fastcgi_params;
-      fastcgi_pass php;
-      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     include /etc/nginx/common/*.conf;
