--- a/tag-latest/nginx.conf
+++ b/tag-latest/nginx.conf
@@ -67,10 +67,8 @@ http {
 
   limit_req_status 503;
   limit_req_zone $request_uri zone=one:10m rate=1r/s;
-
-  limit_conn_zone $binary_remote_addr zone=limit_per_ip:10m;
-  limit_conn limit_per_ip 80;
-
+  limit_conn_zone $binary_remote_addr zone=addr:10m;
+  
   gzip off;
 
   upstream php {
